- Rounded corners in css - Fix for create new topic and cancel brings you back to top topic in notebook - If entry is collapsed and user clicks TOC link, the entry should open and scroll to the correct location.

--- a/src/main/webapp/application/css/main.css
+++ b/src/main/webapp/application/css/main.css
@@ -128,6 +128,9 @@ div.fieldHelp {
 .stylized{
 border:solid 2px #b7ddf2;
 background:#ebf4fb;
+-moz-border-radius: 4px;
+-webkit-border-radius: 4px;
+border-radius: 4px;
 }
 .stylized h1 {
 font-size:14px;
@@ -205,11 +208,16 @@ line-height:31px;
 color:#FFFFFF;
 font-size:14px;
 font-weight:bold;
+-moz-border-radius: 4px;
+-webkit-border-radius: 4px;
+border-radius: 4px;
 }
 
 .stylized button:hover {
 	cursor:pointer;
+	background:#888888;
 }
+
 
 .thin {
 	height: 30px;
@@ -289,6 +297,9 @@ font-weight:bold;
 	border:solid 2px #b7ddf2;
 	/*background:#ebf4fb;*/
 	margin-bottom: 10px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
 }
 
 .entry-title {
@@ -367,6 +378,9 @@ font-weight:bold;
 	border:solid 2px #b7ddf2;
 	/*background:#ebf4fb;*/
 	margin-bottom: 10px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;	
 }
 
 .help-body {
